--- a/question2.html
+++ b/question2.html
@@ -1,4 +1,22 @@
-<!-- background2.jpg used -->
-<p>Our First Date</p>
-<button onclick="rightAnswer('question3.html')">Heaven Rooftop Bar</button>
-<button onclick="wrongAnswer()">Burger King</button>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Question 1</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+  <style>
+    body {
+      background: url('background2.jpg') no-repeat center center/cover;
+      color: white;
+      text-align: center;
+      padding-top: 100px;
+    }
+  </style>
+</head>
+<body>
+  <h2>Our First Date</h2>
+  <button onclick="wrongAnswer()">Burger King</button>
+  <button onclick="rightAnswer('question3.html')">Heaven Rooftop Bar</button>
+</body>
+</html>
