--- a/question3.html
+++ b/question3.html
@@ -1,6 +1,21 @@
-<!-- background3.jpg used -->
-<p>How Much You Love Me?</p>
-<button onclick="finalStep()">A lot</button>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Question 3</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+  <style>
+    body {
+      background: url('background3.jpg') no-repeat center center/cover;
+      color: white;
+      text-align: center;
+      padding-top: 100px;
+    }
+  </style>
+</head>
+<body>
+  <h2>How Much You Love Me?</h2>
+  <button onclick="finalStep()">A lot</button>
 <button onclick="finalStep()">A lot lot</button>
 <button onclick="finalStep()">A loooottt Looooott Looootttttttt</button>
 
@@ -10,3 +25,8 @@ function finalStep() {
   window.location.href = "video.html";
 }
 </script>
+</body>
+</html>
+
+
+
