--- a/video.html
+++ b/video.html
@@ -6,13 +6,7 @@
 </head>
 <body style="text-align: center; margin-top: 50px; background-color: #000;">
   <h2 style="color: white;">🎬 Surprise Video</h2>
-  <iframe 
-    src="https://drive.google.com/file/d/1JWB3KPiBWNMH7JDxDytiwNK0HYwTCo_4/view?usp=drivesdk" 
-    width="640" height="480"
-    allow="autoplay"
-    style="border: none;">
-  </iframe>
-
+  <<iframe src="https://drive.google.com/file/d/1JWB3KPiBWNMH7JDxDytiwNK0HYwTCo_4/preview" width="640" height="360" allow="autoplay" allowfullscreen></iframe>
   <script>
     setTimeout(() => {
       alert("Congrats!!! You are getting another love letter from me 😊😊😊");
