--- a/video.html
+++ b/video.html
@@ -6,7 +6,12 @@
 </head>
 <body style="text-align: center; margin-top: 50px; background-color: #000;">
   <h2 style="color: white;">🎬 Surprise Video</h2>
-  <<iframe src="https://drive.google.com/file/d/1JWB3KPiBWNMH7JDxDytiwNK0HYwTCo_4/preview" width="640" height="360" allow="autoplay" allowfullscreen></iframe>
+  <iframe
+  src="https://drive.google.com/file/d/1JWB3KPiBWNMH7JDxDytiwNK0HYwTCo_4/preview"
+  style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; border: none; z-index: 9999;"
+  allow="autoplay; fullscreen"
+  allowfullscreen>
+</iframe>
   <script>
     setTimeout(() => {
       alert("Congrats!!! You are getting another love letter from me 😊😊😊");
