--- a/video.html
+++ b/video.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Watch Video</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body style="text-align: center; margin-top: 50px; background-color: #000;">
