--- a/question2.html
+++ b/question2.html
@@ -36,7 +36,7 @@
 
     // On click: open PDF in new tab + redirect
     button.onclick = function () {
-      window.open("loveletter.pdf", "_blank");
+      window.open("love_letter.pdf", "_blank");
 
       // Redirect after short delay
       setTimeout(() => {
